--- a/archives/toutiao-search/2024-04-01.md
+++ b/archives/toutiao-search/2024-04-01.md
@@ -1,59 +1,75 @@
 # 2024-04-01
 
-共 212 条
+共 224 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Apr 01 2024 15:00:38 GMT+0800 (China Standard Time) -->
-1. [南昌突起强风 男子抱住大棚被吹飞](https://so.toutiao.com/search?keyword=南昌突起强风+男子抱住大棚被吹飞)
+<!-- 最后更新时间 Mon Apr 01 2024 16:00:47 GMT+0800 (China Standard Time) -->
+1. [马英九率台湾青年抵达深圳](https://so.toutiao.com/search?keyword=马英九率台湾青年抵达深圳)
+1. [马英九为何选择参观大疆腾讯比亚迪](https://so.toutiao.com/search?keyword=马英九为何选择参观大疆腾讯比亚迪)
+1. [淳朴云南热情洋溢](https://so.toutiao.com/search?keyword=淳朴云南热情洋溢)
 1. [网友：整个上饶被“提灯定损”牵连](https://so.toutiao.com/search?keyword=网友：整个上饶被“提灯定损”牵连)
-1. [万千气象看云南](https://so.toutiao.com/search?keyword=万千气象看云南)
 1. [解放军将在中缅边境实兵实弹演习](https://so.toutiao.com/search?keyword=解放军将在中缅边境实兵实弹演习)
-1. [婆婆担心产后儿媳请吊车将其送上楼](https://so.toutiao.com/search?keyword=婆婆担心产后儿媳请吊车将其送上楼)
-1. [业主回应占位车拆焊条：不接受调解](https://so.toutiao.com/search?keyword=业主回应占位车拆焊条：不接受调解)
-1. [专家：美军真的在为介入台海做准备](https://so.toutiao.com/search?keyword=专家：美军真的在为介入台海做准备)
-1. [4楼男子厨房抽烟2楼邻居找上门](https://so.toutiao.com/search?keyword=4楼男子厨房抽烟2楼邻居找上门)
-1. [大V：谁给提灯定损房东讹人的底气](https://so.toutiao.com/search?keyword=大V：谁给提灯定损房东讹人的底气)
-1. [公安系统人事密集调整](https://so.toutiao.com/search?keyword=公安系统人事密集调整)
-1. [3岁孩子被从22楼扔下 媒体回访现场](https://so.toutiao.com/search?keyword=3岁孩子被从22楼扔下+媒体回访现场)
-1. [灵隐寺：从未开通或授权开通商户号](https://so.toutiao.com/search?keyword=灵隐寺：从未开通或授权开通商户号)
-1. [南昌强对流天气致4死10余伤](https://so.toutiao.com/search?keyword=南昌强对流天气致4死10余伤)
-1. [重庆扔小孩母亲避开了楼下安全气囊](https://so.toutiao.com/search?keyword=重庆扔小孩母亲避开了楼下安全气囊)
-1. [普京幽默化解位置被州长误坐的尴尬](https://so.toutiao.com/search?keyword=普京幽默化解位置被州长误坐的尴尬)
-1. [南昌红谷滩1600多棵树一夜被吹倒](https://so.toutiao.com/search?keyword=南昌红谷滩1600多棵树一夜被吹倒)
-1. [媒体评女子扔孩子下楼：跌破人伦底线](https://so.toutiao.com/search?keyword=媒体评女子扔孩子下楼：跌破人伦底线)
-1. [88岁王德顺穿大花袄走秀](https://so.toutiao.com/search?keyword=88岁王德顺穿大花袄走秀)
-1. [法院认定郑爽无财产可供执行](https://so.toutiao.com/search?keyword=法院认定郑爽无财产可供执行)
-1. [官方通报女子22楼扔下孩子：突发躁狂](https://so.toutiao.com/search?keyword=官方通报女子22楼扔下孩子：突发躁狂)
-1. [成都一迈巴赫连撞多人致2死2伤](https://so.toutiao.com/search?keyword=成都一迈巴赫连撞多人致2死2伤)
-1. [外资买走万达 下一个会是万科吗](https://so.toutiao.com/search?keyword=外资买走万达+下一个会是万科吗)
-1. [律师：高空抛子是否担刑责看精神状态](https://so.toutiao.com/search?keyword=律师：高空抛子是否担刑责看精神状态)
-1. [体彩回应网友称买到透光刮刮乐](https://so.toutiao.com/search?keyword=体彩回应网友称买到透光刮刮乐)
-1. [斯洛伐克飞行汽车将在中国生产](https://so.toutiao.com/search?keyword=斯洛伐克飞行汽车将在中国生产)
-1. [央媒：规培医生不该成为廉价劳动力](https://so.toutiao.com/search?keyword=央媒：规培医生不该成为廉价劳动力)
-1. [海清素颜回老家祭祖](https://so.toutiao.com/search?keyword=海清素颜回老家祭祖)
 1. [保时捷门店回应买保时捷送小米SU7](https://so.toutiao.com/search?keyword=保时捷门店回应买保时捷送小米SU7)
-1. [岳阳版“王婆说媒”引爆汴河街](https://so.toutiao.com/search?keyword=岳阳版“王婆说媒”引爆汴河街)
-1. [姐弟俩同时从12层坠亡 警方通报](https://so.toutiao.com/search?keyword=姐弟俩同时从12层坠亡+警方通报)
-1. [小米SU7创始版第2轮追加开售已售罄](https://so.toutiao.com/search?keyword=小米SU7创始版第2轮追加开售已售罄)
-1. [卡友举报江西汽修店：千元费用变1.7万](https://so.toutiao.com/search?keyword=卡友举报江西汽修店：千元费用变1.7万)
+1. [南昌雷暴大风一小区3人坠亡](https://so.toutiao.com/search?keyword=南昌雷暴大风一小区3人坠亡)
+1. [外资买走万达 下一个会是万科吗](https://so.toutiao.com/search?keyword=外资买走万达+下一个会是万科吗)
+1. [朝皮划艇游客扔石头的员工被开除](https://so.toutiao.com/search?keyword=朝皮划艇游客扔石头的员工被开除)
 1. [6人因“咸猪手”引发斗殴均被控制](https://so.toutiao.com/search?keyword=6人因“咸猪手”引发斗殴均被控制)
+1. [南昌突起强风 男子抱住大棚被吹飞](https://so.toutiao.com/search?keyword=南昌突起强风+男子抱住大棚被吹飞)
+1. [灵隐寺：从未开通或授权开通商户号](https://so.toutiao.com/search?keyword=灵隐寺：从未开通或授权开通商户号)
+1. [官方通报女子22楼扔下孩子：突发躁狂](https://so.toutiao.com/search?keyword=官方通报女子22楼扔下孩子：突发躁狂)
+1. [南昌强对流天气致4死10余伤](https://so.toutiao.com/search?keyword=南昌强对流天气致4死10余伤)
+1. [普京幽默化解位置被州长误坐的尴尬](https://so.toutiao.com/search?keyword=普京幽默化解位置被州长误坐的尴尬)
+1. [法院认定郑爽无财产可供执行](https://so.toutiao.com/search?keyword=法院认定郑爽无财产可供执行)
+1. [南昌红谷滩1600多棵树一夜被吹倒](https://so.toutiao.com/search?keyword=南昌红谷滩1600多棵树一夜被吹倒)
+1. [88岁王德顺穿大花袄走秀](https://so.toutiao.com/search?keyword=88岁王德顺穿大花袄走秀)
+1. [海清素颜回老家祭祖](https://so.toutiao.com/search?keyword=海清素颜回老家祭祖)
+1. [成都一迈巴赫连撞多人致2死2伤](https://so.toutiao.com/search?keyword=成都一迈巴赫连撞多人致2死2伤)
+1. [贾跃亭评小米汽车：非常成功](https://so.toutiao.com/search?keyword=贾跃亭评小米汽车：非常成功)
 1. [开封王婆：自带剧本的不要凑热闹](https://so.toutiao.com/search?keyword=开封王婆：自带剧本的不要凑热闹)
+1. [专家：美军真的在为介入台海做准备](https://so.toutiao.com/search?keyword=专家：美军真的在为介入台海做准备)
+1. [姐弟俩同时从12层坠亡 警方通报](https://so.toutiao.com/search?keyword=姐弟俩同时从12层坠亡+警方通报)
+1. [公安系统人事密集调整](https://so.toutiao.com/search?keyword=公安系统人事密集调整)
+1. [女子熬夜后报复式补觉一天饿晕倒](https://so.toutiao.com/search?keyword=女子熬夜后报复式补觉一天饿晕倒)
+1. [小米SU7创始版第2轮追加开售已售罄](https://so.toutiao.com/search?keyword=小米SU7创始版第2轮追加开售已售罄)
+1. [4楼男子厨房抽烟2楼邻居找上门](https://so.toutiao.com/search?keyword=4楼男子厨房抽烟2楼邻居找上门)
+1. [13岁女孩帮同学取快递失踪 家属发声](https://so.toutiao.com/search?keyword=13岁女孩帮同学取快递失踪+家属发声)
+1. [中方：菲应停止拉域外势力介入南海](https://so.toutiao.com/search?keyword=中方：菲应停止拉域外势力介入南海)
+1. [重庆扔小孩母亲避开了楼下安全气囊](https://so.toutiao.com/search?keyword=重庆扔小孩母亲避开了楼下安全气囊)
+1. [央媒：规培医生不该成为廉价劳动力](https://so.toutiao.com/search?keyword=央媒：规培医生不该成为廉价劳动力)
+1. [围观开封王婆说媒现场](https://so.toutiao.com/search?keyword=围观开封王婆说媒现场)
+1. [媒体评女子扔孩子下楼：跌破人伦底线](https://so.toutiao.com/search?keyword=媒体评女子扔孩子下楼：跌破人伦底线)
+1. [南昌为何会突发强对流天气](https://so.toutiao.com/search?keyword=南昌为何会突发强对流天气)
+1. [体彩回应网友称买到透光刮刮乐](https://so.toutiao.com/search?keyword=体彩回应网友称买到透光刮刮乐)
+1. [律师：高空抛子是否担刑责看精神状态](https://so.toutiao.com/search?keyword=律师：高空抛子是否担刑责看精神状态)
 1. [张颂文返乡参加亲戚婚礼](https://so.toutiao.com/search?keyword=张颂文返乡参加亲戚婚礼)
-1. [为何银行会反过来向员工讨薪](https://so.toutiao.com/search?keyword=为何银行会反过来向员工讨薪)
+1. [业主回应占位车拆焊条：不接受调解](https://so.toutiao.com/search?keyword=业主回应占位车拆焊条：不接受调解)
 1. [台军方辩解士兵被大陆无人机吓跑](https://so.toutiao.com/search?keyword=台军方辩解士兵被大陆无人机吓跑)
+1. [建材老板称曾倒贴退房事件房东几千](https://so.toutiao.com/search?keyword=建材老板称曾倒贴退房事件房东几千)
+1. [斯洛伐克飞行汽车将在中国生产](https://so.toutiao.com/search?keyword=斯洛伐克飞行汽车将在中国生产)
+1. [《欢乐颂5》何悯鸿帮方芷衡看妹妹](https://so.toutiao.com/search?keyword=《欢乐颂5》何悯鸿帮方芷衡看妹妹)
+1. [岳阳版“王婆说媒”引爆汴河街](https://so.toutiao.com/search?keyword=岳阳版“王婆说媒”引爆汴河街)
+1. [小米汽车回应建议舒淇代言SU7](https://so.toutiao.com/search?keyword=小米汽车回应建议舒淇代言SU7)
+1. [首饰金价格逼近每克700元](https://so.toutiao.com/search?keyword=首饰金价格逼近每克700元)
+1. [马英九访问大陆11天完整行程公布](https://so.toutiao.com/search?keyword=马英九访问大陆11天完整行程公布)
+1. [俄黑海舰队或已损失三分之一战舰](https://so.toutiao.com/search?keyword=俄黑海舰队或已损失三分之一战舰)
+1. [中国陆军赴俄参赛队抵达莫斯科](https://so.toutiao.com/search?keyword=中国陆军赴俄参赛队抵达莫斯科)
+1. [小米集团高管辟谣小米SU7锁单量](https://so.toutiao.com/search?keyword=小米集团高管辟谣小米SU7锁单量)
+1. [万千气象看云南](https://so.toutiao.com/search?keyword=万千气象看云南)
+1. [婆婆担心产后儿媳请吊车将其送上楼](https://so.toutiao.com/search?keyword=婆婆担心产后儿媳请吊车将其送上楼)
+1. [大V：谁给提灯定损房东讹人的底气](https://so.toutiao.com/search?keyword=大V：谁给提灯定损房东讹人的底气)
+1. [3岁孩子被从22楼扔下 媒体回访现场](https://so.toutiao.com/search?keyword=3岁孩子被从22楼扔下+媒体回访现场)
+1. [卡友举报江西汽修店：千元费用变1.7万](https://so.toutiao.com/search?keyword=卡友举报江西汽修店：千元费用变1.7万)
+1. [为何银行会反过来向员工讨薪](https://so.toutiao.com/search?keyword=为何银行会反过来向员工讨薪)
 1. [352名缅北电诈嫌疑人移交中方](https://so.toutiao.com/search?keyword=352名缅北电诈嫌疑人移交中方)
 1. [金价一路狂飙 多只基金水涨船高](https://so.toutiao.com/search?keyword=金价一路狂飙+多只基金水涨船高)
 1. [翁虹巫启贤等送别何厚华](https://so.toutiao.com/search?keyword=翁虹巫启贤等送别何厚华)
-1. [13岁女孩帮同学取快递失踪 家属发声](https://so.toutiao.com/search?keyword=13岁女孩帮同学取快递失踪+家属发声)
 1. [新能源车价格大战“热辣滚烫”](https://so.toutiao.com/search?keyword=新能源车价格大战“热辣滚烫”)
 1. [南昌狂风屋顶被“剃头”菜棚被卷走](https://so.toutiao.com/search?keyword=南昌狂风屋顶被“剃头”菜棚被卷走)
 1. [俄要求乌引渡恐袭案嫌犯 乌方回应](https://so.toutiao.com/search?keyword=俄要求乌引渡恐袭案嫌犯+乌方回应)
 1. [华人留学生抗议加拿大移民政策收紧](https://so.toutiao.com/search?keyword=华人留学生抗议加拿大移民政策收紧)
-1. [建材老板称曾倒贴退房事件房东几千](https://so.toutiao.com/search?keyword=建材老板称曾倒贴退房事件房东几千)
 1. [俄要求乌逮捕并引渡参与恐袭人员](https://so.toutiao.com/search?keyword=俄要求乌逮捕并引渡参与恐袭人员)
 1. [男童判给生母后死亡 生父发声](https://so.toutiao.com/search?keyword=男童判给生母后死亡+生父发声)
 1. [邱国正称不会帮涉嫌嫖妓的儿子救火](https://so.toutiao.com/search?keyword=邱国正称不会帮涉嫌嫖妓的儿子救火)
-1. [首饰金价格逼近每克700元](https://so.toutiao.com/search?keyword=首饰金价格逼近每克700元)
 1. [胡锡进谈女子高空抛下孩子：心碎](https://so.toutiao.com/search?keyword=胡锡进谈女子高空抛下孩子：心碎)
 1. [以色列否认与联黎部队遭袭有关](https://so.toutiao.com/search?keyword=以色列否认与联黎部队遭袭有关)
 1. [王伟烈士父亲：祖国没有忘记他](https://so.toutiao.com/search?keyword=王伟烈士父亲：祖国没有忘记他)
@@ -84,8 +100,6 @@
 1. [巴黎奥运会到底出了什么问题](https://so.toutiao.com/search?keyword=巴黎奥运会到底出了什么问题)
 1. [小米汽车副总裁回应陈震删雷军合影](https://so.toutiao.com/search?keyword=小米汽车副总裁回应陈震删雷军合影)
 1. [20.99万起 极氪007新增车型上市](https://so.toutiao.com/search?keyword=20.99万起+极氪007新增车型上市)
-1. [围观开封王婆说媒现场](https://so.toutiao.com/search?keyword=围观开封王婆说媒现场)
-1. [小米汽车回应建议舒淇代言SU7](https://so.toutiao.com/search?keyword=小米汽车回应建议舒淇代言SU7)
 1. [女生走错教室发现老师长得都很像](https://so.toutiao.com/search?keyword=女生走错教室发现老师长得都很像)
 1. [大V：通缩阴影下普通人如何把握命运](https://so.toutiao.com/search?keyword=大V：通缩阴影下普通人如何把握命运)
 1. [王婆说媒下午场改晚上：怕你们受罪](https://so.toutiao.com/search?keyword=王婆说媒下午场改晚上：怕你们受罪)
@@ -149,7 +163,6 @@
 1. [海口一男子疑酒后调戏妇女被群殴](https://so.toutiao.com/search?keyword=海口一男子疑酒后调戏妇女被群殴)
 1. [小米1天卖出北汽新能源1年销量](https://so.toutiao.com/search?keyword=小米1天卖出北汽新能源1年销量)
 1. [黄冈王婆说媒现场人山人海](https://so.toutiao.com/search?keyword=黄冈王婆说媒现场人山人海)
-1. [俄黑海舰队或已损失三分之一战舰](https://so.toutiao.com/search?keyword=俄黑海舰队或已损失三分之一战舰)
 1. [央视评王婆说媒走红](https://so.toutiao.com/search?keyword=央视评王婆说媒走红)
 1. [哈兰德错失良机 阿森纳0-0曼城](https://so.toutiao.com/search?keyword=哈兰德错失良机+阿森纳0-0曼城)
 1. [小米汽车高管：掌握SU7被抹黑证据](https://so.toutiao.com/search?keyword=小米汽车高管：掌握SU7被抹黑证据)
@@ -199,7 +212,6 @@
 1. [“奔驰男砸奇瑞引擎盖”定损500元](https://so.toutiao.com/search?keyword=“奔驰男砸奇瑞引擎盖”定损500元)
 1. [马英九访粤行程更多细节披露](https://so.toutiao.com/search?keyword=马英九访粤行程更多细节披露)
 1. [陆军第71集团军从严考评一线带兵人](https://so.toutiao.com/search?keyword=陆军第71集团军从严考评一线带兵人)
-1. [马英九访问大陆11天完整行程公布](https://so.toutiao.com/search?keyword=马英九访问大陆11天完整行程公布)
 1. [博主分享新骗局：帮小孩拧瓶盖被讹](https://so.toutiao.com/search?keyword=博主分享新骗局：帮小孩拧瓶盖被讹)
 1. [俄军持续空袭 乌克兰多地紧急停电](https://so.toutiao.com/search?keyword=俄军持续空袭+乌克兰多地紧急停电)
 1. [俄方抓获3名计划恐袭的犯罪嫌疑人](https://so.toutiao.com/search?keyword=俄方抓获3名计划恐袭的犯罪嫌疑人)
