--- a/archives/toutiao-search/2024-04-01.md
+++ b/archives/toutiao-search/2024-04-01.md
@@ -1,61 +1,77 @@
 # 2024-04-01
 
-共 282 条
+共 294 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Apr 01 2024 20:00:41 GMT+0800 (China Standard Time) -->
-1. [雷军再次请大家吐槽SU7时口下留情](https://so.toutiao.com/search?keyword=雷军再次请大家吐槽SU7时口下留情)
-1. [广州珠江大桥一吊机倒塌](https://so.toutiao.com/search?keyword=广州珠江大桥一吊机倒塌)
-1. [淳朴云南热情洋溢](https://so.toutiao.com/search?keyword=淳朴云南热情洋溢)
+<!-- 最后更新时间 Mon Apr 01 2024 21:02:28 GMT+0800 (China Standard Time) -->
+1. [载中国移民船只倾覆8人遇难？中方回应](https://so.toutiao.com/search?keyword=载中国移民船只倾覆8人遇难？中方回应)
 1. [提灯定损房东女儿被开除？当地回应](https://so.toutiao.com/search?keyword=提灯定损房东女儿被开除？当地回应)
-1. [媒体谈解放军为何要在中缅边境演习](https://so.toutiao.com/search?keyword=媒体谈解放军为何要在中缅边境演习)
-1. [俄对乌用大威力炸弹 爆炸云高千米](https://so.toutiao.com/search?keyword=俄对乌用大威力炸弹+爆炸云高千米)
+1. [有一种叫云南的生活](https://so.toutiao.com/search?keyword=有一种叫云南的生活)
+1. [广州珠江大桥一吊机倒塌](https://so.toutiao.com/search?keyword=广州珠江大桥一吊机倒塌)
+1. [雷军再次请大家吐槽SU7时口下留情](https://so.toutiao.com/search?keyword=雷军再次请大家吐槽SU7时口下留情)
 1. [网友：整个上饶被“提灯定损”牵连](https://so.toutiao.com/search?keyword=网友：整个上饶被“提灯定损”牵连)
-1. [外资买走万达 下一个会是万科吗](https://so.toutiao.com/search?keyword=外资买走万达+下一个会是万科吗)
-1. [买保时捷送小米SU7？门店回应](https://so.toutiao.com/search?keyword=买保时捷送小米SU7？门店回应)
 1. [金门防卫部火炮转向金厦南部水域](https://so.toutiao.com/search?keyword=金门防卫部火炮转向金厦南部水域)
-1. [南昌夫妻分房睡妻子被吹下楼坠亡](https://so.toutiao.com/search?keyword=南昌夫妻分房睡妻子被吹下楼坠亡)
+1. [俄对乌用大威力炸弹 爆炸云高千米](https://so.toutiao.com/search?keyword=俄对乌用大威力炸弹+爆炸云高千米)
+1. [媒体谈解放军为何要在中缅边境演习](https://so.toutiao.com/search?keyword=媒体谈解放军为何要在中缅边境演习)
+1. [大疆公司总裁为马英九解说产品](https://so.toutiao.com/search?keyword=大疆公司总裁为马英九解说产品)
+1. [祖孙俩连人带床垫被风卷下楼坠亡](https://so.toutiao.com/search?keyword=祖孙俩连人带床垫被风卷下楼坠亡)
 1. [湖南一地辟谣幼师针扎虐童](https://so.toutiao.com/search?keyword=湖南一地辟谣幼师针扎虐童)
 1. [马英九率台湾青年抵达深圳](https://so.toutiao.com/search?keyword=马英九率台湾青年抵达深圳)
-1. [南昌突起强风 男子抱住大棚被吹飞](https://so.toutiao.com/search?keyword=南昌突起强风+男子抱住大棚被吹飞)
-1. [官方通报女子22楼扔下孩子：突发躁狂](https://so.toutiao.com/search?keyword=官方通报女子22楼扔下孩子：突发躁狂)
+1. [南昌夫妻分房睡妻子被吹下楼坠亡](https://so.toutiao.com/search?keyword=南昌夫妻分房睡妻子被吹下楼坠亡)
+1. [老人拿锤砸火车站座椅无线充电器](https://so.toutiao.com/search?keyword=老人拿锤砸火车站座椅无线充电器)
 1. [网友建议彻查提灯定损房东是否违建](https://so.toutiao.com/search?keyword=网友建议彻查提灯定损房东是否违建)
+1. [南昌突起强风 男子抱住大棚被吹飞](https://so.toutiao.com/search?keyword=南昌突起强风+男子抱住大棚被吹飞)
+1. [买保时捷送小米SU7？门店回应](https://so.toutiao.com/search?keyword=买保时捷送小米SU7？门店回应)
+1. [92号汽油重回8元时代](https://so.toutiao.com/search?keyword=92号汽油重回8元时代)
 1. [南昌雷暴大风一小区3人坠亡](https://so.toutiao.com/search?keyword=南昌雷暴大风一小区3人坠亡)
-1. [马英九为何选择参观大疆腾讯比亚迪](https://so.toutiao.com/search?keyword=马英九为何选择参观大疆腾讯比亚迪)
-1. [普京幽默化解位置被州长误坐的尴尬](https://so.toutiao.com/search?keyword=普京幽默化解位置被州长误坐的尴尬)
-1. [祖孙俩连人带床垫被风卷下楼坠亡](https://so.toutiao.com/search?keyword=祖孙俩连人带床垫被风卷下楼坠亡)
-1. [人民热评：《王婆说媒》不应被干扰](https://so.toutiao.com/search?keyword=人民热评：《王婆说媒》不应被干扰)
-1. [袁咏仪晒合照悼念张国荣](https://so.toutiao.com/search?keyword=袁咏仪晒合照悼念张国荣)
+1. [德国民众在首都聚众吸食大麻](https://so.toutiao.com/search?keyword=德国民众在首都聚众吸食大麻)
+1. [郑爽若故意隐瞒转移财产或被判3年](https://so.toutiao.com/search?keyword=郑爽若故意隐瞒转移财产或被判3年)
 1. [南昌红谷滩1600多棵树一夜被吹倒](https://so.toutiao.com/search?keyword=南昌红谷滩1600多棵树一夜被吹倒)
+1. [白鲸“承认”吓唬小朋友](https://so.toutiao.com/search?keyword=白鲸“承认”吓唬小朋友)
+1. [乌士兵突然戴上德国纳粹党卫军军帽](https://so.toutiao.com/search?keyword=乌士兵突然戴上德国纳粹党卫军军帽)
+1. [南昌为何会突发强对流天气](https://so.toutiao.com/search?keyword=南昌为何会突发强对流天气)
+1. [人民热评：《王婆说媒》不应被干扰](https://so.toutiao.com/search?keyword=人民热评：《王婆说媒》不应被干扰)
+1. [外资买走万达 下一个会是万科吗](https://so.toutiao.com/search?keyword=外资买走万达+下一个会是万科吗)
+1. [南昌强对流天气致4死10余伤](https://so.toutiao.com/search?keyword=南昌强对流天气致4死10余伤)
+1. [马英九为何选择参观大疆腾讯比亚迪](https://so.toutiao.com/search?keyword=马英九为何选择参观大疆腾讯比亚迪)
+1. [父亲戒烟酒多年 临终前儿子陪喝酒](https://so.toutiao.com/search?keyword=父亲戒烟酒多年+临终前儿子陪喝酒)
+1. [普京幽默化解位置被州长误坐的尴尬](https://so.toutiao.com/search?keyword=普京幽默化解位置被州长误坐的尴尬)
+1. [俄罗斯一咖啡馆发生爆炸](https://so.toutiao.com/search?keyword=俄罗斯一咖啡馆发生爆炸)
+1. [为何银行会反过来向员工讨薪](https://so.toutiao.com/search?keyword=为何银行会反过来向员工讨薪)
+1. [女子吃螃蟹被卡 就医后查出胃癌](https://so.toutiao.com/search?keyword=女子吃螃蟹被卡+就医后查出胃癌)
+1. [女子大声喝止吵闹小孩与家长起争执](https://so.toutiao.com/search?keyword=女子大声喝止吵闹小孩与家长起争执)
+1. [88岁王德顺穿大花袄走秀](https://so.toutiao.com/search?keyword=88岁王德顺穿大花袄走秀)
+1. [股东回应悦阁月子中心跑路](https://so.toutiao.com/search?keyword=股东回应悦阁月子中心跑路)
+1. [越南电荒希望中国分享电力技术](https://so.toutiao.com/search?keyword=越南电荒希望中国分享电力技术)
+1. [驻俄大使回应中方会否调解俄乌冲突](https://so.toutiao.com/search?keyword=驻俄大使回应中方会否调解俄乌冲突)
+1. [湖北18岁高中生已失联30天](https://so.toutiao.com/search?keyword=湖北18岁高中生已失联30天)
+1. [台军在金门搞实弹射击有何企图](https://so.toutiao.com/search?keyword=台军在金门搞实弹射击有何企图)
+1. [外卖员被撞后遭顶出数十米](https://so.toutiao.com/search?keyword=外卖员被撞后遭顶出数十米)
+1. [黄金价格再创历史新高](https://so.toutiao.com/search?keyword=黄金价格再创历史新高)
+1. [袁咏仪晒合照悼念张国荣](https://so.toutiao.com/search?keyword=袁咏仪晒合照悼念张国荣)
+1. [南昌狂风屋顶被“剃头”菜棚被卷走](https://so.toutiao.com/search?keyword=南昌狂风屋顶被“剃头”菜棚被卷走)
+1. [4楼男子厨房抽烟2楼邻居找上门](https://so.toutiao.com/search?keyword=4楼男子厨房抽烟2楼邻居找上门)
+1. [建材老板称曾倒贴退房事件房东几千](https://so.toutiao.com/search?keyword=建材老板称曾倒贴退房事件房东几千)
+1. [比亚迪：3月新能源车销量30.25万辆](https://so.toutiao.com/search?keyword=比亚迪：3月新能源车销量30.25万辆)
+1. [特斯拉FSD正式取消“测试版”标签](https://so.toutiao.com/search?keyword=特斯拉FSD正式取消“测试版”标签)
+1. [淳朴云南热情洋溢](https://so.toutiao.com/search?keyword=淳朴云南热情洋溢)
+1. [官方通报女子22楼扔下孩子：突发躁狂](https://so.toutiao.com/search?keyword=官方通报女子22楼扔下孩子：突发躁狂)
 1. [解放军将在中缅边境实兵实弹演习](https://so.toutiao.com/search?keyword=解放军将在中缅边境实兵实弹演习)
 1. [唐宝宝洗车被车主少给15元钱](https://so.toutiao.com/search?keyword=唐宝宝洗车被车主少给15元钱)
-1. [南昌强对流天气致4死10余伤](https://so.toutiao.com/search?keyword=南昌强对流天气致4死10余伤)
-1. [4楼男子厨房抽烟2楼邻居找上门](https://so.toutiao.com/search?keyword=4楼男子厨房抽烟2楼邻居找上门)
 1. [岳阳暴雨后现女尸 无人认领](https://so.toutiao.com/search?keyword=岳阳暴雨后现女尸+无人认领)
-1. [南昌为何会突发强对流天气](https://so.toutiao.com/search?keyword=南昌为何会突发强对流天气)
-1. [白鲸“承认”吓唬小朋友](https://so.toutiao.com/search?keyword=白鲸“承认”吓唬小朋友)
 1. [江南等地将进入强对流强降雨高发期](https://so.toutiao.com/search?keyword=江南等地将进入强对流强降雨高发期)
 1. [小米SU7引发同行密集行动](https://so.toutiao.com/search?keyword=小米SU7引发同行密集行动)
-1. [俄罗斯一咖啡馆发生爆炸](https://so.toutiao.com/search?keyword=俄罗斯一咖啡馆发生爆炸)
-1. [88岁王德顺穿大花袄走秀](https://so.toutiao.com/search?keyword=88岁王德顺穿大花袄走秀)
-1. [为何银行会反过来向员工讨薪](https://so.toutiao.com/search?keyword=为何银行会反过来向员工讨薪)
-1. [女子大声喝止吵闹小孩与家长起争执](https://so.toutiao.com/search?keyword=女子大声喝止吵闹小孩与家长起争执)
 1. [朝皮划艇游客扔石头的员工被开除](https://so.toutiao.com/search?keyword=朝皮划艇游客扔石头的员工被开除)
 1. [中缅警方抓获807名跨境电诈嫌犯](https://so.toutiao.com/search?keyword=中缅警方抓获807名跨境电诈嫌犯)
 1. [韩国超万名医学生申请休学](https://so.toutiao.com/search?keyword=韩国超万名医学生申请休学)
 1. [开封王婆：说媒现在变味了](https://so.toutiao.com/search?keyword=开封王婆：说媒现在变味了)
-1. [92号汽油重回8元时代](https://so.toutiao.com/search?keyword=92号汽油重回8元时代)
 1. [王毅：中国对欧洲是机遇不是风险](https://so.toutiao.com/search?keyword=王毅：中国对欧洲是机遇不是风险)
 1. [母子拐走11岁女孩欲让其当媳妇获刑](https://so.toutiao.com/search?keyword=母子拐走11岁女孩欲让其当媳妇获刑)
-1. [湖北18岁高中生已失联30天](https://so.toutiao.com/search?keyword=湖北18岁高中生已失联30天)
 1. [首饰金价格逼近每克700元](https://so.toutiao.com/search?keyword=首饰金价格逼近每克700元)
 1. [万达获600亿元投资背后](https://so.toutiao.com/search?keyword=万达获600亿元投资背后)
 1. [国内成品油零售限价再迎上调](https://so.toutiao.com/search?keyword=国内成品油零售限价再迎上调)
-1. [黄金价格再创历史新高](https://so.toutiao.com/search?keyword=黄金价格再创历史新高)
 1. [央媒：规培医生不该成为廉价劳动力](https://so.toutiao.com/search?keyword=央媒：规培医生不该成为廉价劳动力)
 1. [房东索赔上万 租客赔四千合理吗](https://so.toutiao.com/search?keyword=房东索赔上万+租客赔四千合理吗)
-1. [女子吃螃蟹被卡 就医后查出胃癌](https://so.toutiao.com/search?keyword=女子吃螃蟹被卡+就医后查出胃癌)
-1. [乌士兵突然戴上德国纳粹党卫军军帽](https://so.toutiao.com/search?keyword=乌士兵突然戴上德国纳粹党卫军军帽)
 1. [邱毅谈马英九访陆](https://so.toutiao.com/search?keyword=邱毅谈马英九访陆)
 1. [俄安全局长：知道谁是恐袭组织者](https://so.toutiao.com/search?keyword=俄安全局长：知道谁是恐袭组织者)
 1. [法院认定郑爽无财产可供执行](https://so.toutiao.com/search?keyword=法院认定郑爽无财产可供执行)
@@ -75,10 +91,8 @@
 1. [灵隐寺：从未开通或授权开通商户号](https://so.toutiao.com/search?keyword=灵隐寺：从未开通或授权开通商户号)
 1. [马英九二度访问大陆有何积极意义](https://so.toutiao.com/search?keyword=马英九二度访问大陆有何积极意义)
 1. [农工党中央办公厅原主任被决定逮捕](https://so.toutiao.com/search?keyword=农工党中央办公厅原主任被决定逮捕)
-1. [外卖员被撞后遭顶出数十米](https://so.toutiao.com/search?keyword=外卖员被撞后遭顶出数十米)
 1. [外交部介绍巴基斯坦恐袭善后处理](https://so.toutiao.com/search?keyword=外交部介绍巴基斯坦恐袭善后处理)
 1. [天水麻辣烫爆火后岛内现奇葩言论](https://so.toutiao.com/search?keyword=天水麻辣烫爆火后岛内现奇葩言论)
-1. [父亲戒烟酒多年 临终前儿子陪喝酒](https://so.toutiao.com/search?keyword=父亲戒烟酒多年+临终前儿子陪喝酒)
 1. [中方支持巴勒斯坦新政府履职](https://so.toutiao.com/search?keyword=中方支持巴勒斯坦新政府履职)
 1. [警方通报上海小车撞外卖员：疲劳驾驶](https://so.toutiao.com/search?keyword=警方通报上海小车撞外卖员：疲劳驾驶)
 1. [张亚中：邱国正或被设局拉下台](https://so.toutiao.com/search?keyword=张亚中：邱国正或被设局拉下台)
@@ -111,7 +125,6 @@
 1. [律师：高空抛子是否担刑责看精神状态](https://so.toutiao.com/search?keyword=律师：高空抛子是否担刑责看精神状态)
 1. [业主回应占位车拆焊条：不接受调解](https://so.toutiao.com/search?keyword=业主回应占位车拆焊条：不接受调解)
 1. [台军方辩解士兵被大陆无人机吓跑](https://so.toutiao.com/search?keyword=台军方辩解士兵被大陆无人机吓跑)
-1. [建材老板称曾倒贴退房事件房东几千](https://so.toutiao.com/search?keyword=建材老板称曾倒贴退房事件房东几千)
 1. [《欢乐颂5》何悯鸿帮方芷衡看妹妹](https://so.toutiao.com/search?keyword=《欢乐颂5》何悯鸿帮方芷衡看妹妹)
 1. [岳阳版“王婆说媒”引爆汴河街](https://so.toutiao.com/search?keyword=岳阳版“王婆说媒”引爆汴河街)
 1. [小米汽车回应建议舒淇代言SU7](https://so.toutiao.com/search?keyword=小米汽车回应建议舒淇代言SU7)
@@ -127,7 +140,6 @@
 1. [金价一路狂飙 多只基金水涨船高](https://so.toutiao.com/search?keyword=金价一路狂飙+多只基金水涨船高)
 1. [翁虹巫启贤等送别何厚华](https://so.toutiao.com/search?keyword=翁虹巫启贤等送别何厚华)
 1. [新能源车价格大战“热辣滚烫”](https://so.toutiao.com/search?keyword=新能源车价格大战“热辣滚烫”)
-1. [南昌狂风屋顶被“剃头”菜棚被卷走](https://so.toutiao.com/search?keyword=南昌狂风屋顶被“剃头”菜棚被卷走)
 1. [俄要求乌引渡恐袭案嫌犯 乌方回应](https://so.toutiao.com/search?keyword=俄要求乌引渡恐袭案嫌犯+乌方回应)
 1. [华人留学生抗议加拿大移民政策收紧](https://so.toutiao.com/search?keyword=华人留学生抗议加拿大移民政策收紧)
 1. [俄要求乌逮捕并引渡参与恐袭人员](https://so.toutiao.com/search?keyword=俄要求乌逮捕并引渡参与恐袭人员)
