--- a/archives/toutiao-search/2024-04-01.md
+++ b/archives/toutiao-search/2024-04-01.md
@@ -1,53 +1,66 @@
 # 2024-04-01
 
-共 301 条
+共 308 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Apr 01 2024 22:00:53 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Apr 01 2024 23:00:35 GMT+0800 (China Standard Time) -->
 1. [提灯定损房东女儿被开除？当地回应](https://so.toutiao.com/search?keyword=提灯定损房东女儿被开除？当地回应)
-1. [媒体谈解放军为何要在中缅边境演习](https://so.toutiao.com/search?keyword=媒体谈解放军为何要在中缅边境演习)
+1. [载中国移民船只倾覆8人遇难？中方回应](https://so.toutiao.com/search?keyword=载中国移民船只倾覆8人遇难？中方回应)
 1. [有一种叫云南的生活](https://so.toutiao.com/search?keyword=有一种叫云南的生活)
 1. [网友：整个上饶被“提灯定损”牵连](https://so.toutiao.com/search?keyword=网友：整个上饶被“提灯定损”牵连)
 1. [雷军再次请大家吐槽SU7时口下留情](https://so.toutiao.com/search?keyword=雷军再次请大家吐槽SU7时口下留情)
-1. [载中国移民船只倾覆8人遇难？中方回应](https://so.toutiao.com/search?keyword=载中国移民船只倾覆8人遇难？中方回应)
-1. [广州珠江大桥一吊机倒塌](https://so.toutiao.com/search?keyword=广州珠江大桥一吊机倒塌)
-1. [老人拿锤砸火车站座椅无线充电器](https://so.toutiao.com/search?keyword=老人拿锤砸火车站座椅无线充电器)
-1. [公职人员捅人致死已被刑拘](https://so.toutiao.com/search?keyword=公职人员捅人致死已被刑拘)
+1. [白鲸“承认”吓唬小朋友](https://so.toutiao.com/search?keyword=白鲸“承认”吓唬小朋友)
+1. [媒体谈解放军为何要在中缅边境演习](https://so.toutiao.com/search?keyword=媒体谈解放军为何要在中缅边境演习)
 1. [俄对乌用大威力炸弹 爆炸云高千米](https://so.toutiao.com/search?keyword=俄对乌用大威力炸弹+爆炸云高千米)
+1. [金门防卫部火炮转向金厦南部水域](https://so.toutiao.com/search?keyword=金门防卫部火炮转向金厦南部水域)
+1. [老人拿锤砸火车站座椅无线充电器](https://so.toutiao.com/search?keyword=老人拿锤砸火车站座椅无线充电器)
 1. [实探南昌3人被大风吹落坠亡现场](https://so.toutiao.com/search?keyword=实探南昌3人被大风吹落坠亡现场)
 1. [湖南一地辟谣幼师针扎虐童](https://so.toutiao.com/search?keyword=湖南一地辟谣幼师针扎虐童)
-1. [德国娱乐性大麻合法化引担忧](https://so.toutiao.com/search?keyword=德国娱乐性大麻合法化引担忧)
-1. [祖孙俩连人带床垫被风卷下楼坠亡](https://so.toutiao.com/search?keyword=祖孙俩连人带床垫被风卷下楼坠亡)
-1. [金门防卫部火炮转向金厦南部水域](https://so.toutiao.com/search?keyword=金门防卫部火炮转向金厦南部水域)
-1. [白鲸“承认”吓唬小朋友](https://so.toutiao.com/search?keyword=白鲸“承认”吓唬小朋友)
-1. [南昌夫妻分房睡妻子被吹下楼坠亡](https://so.toutiao.com/search?keyword=南昌夫妻分房睡妻子被吹下楼坠亡)
-1. [买保时捷送小米SU7？门店回应](https://so.toutiao.com/search?keyword=买保时捷送小米SU7？门店回应)
-1. [郑爽若故意隐瞒转移财产或被判3年](https://so.toutiao.com/search?keyword=郑爽若故意隐瞒转移财产或被判3年)
-1. [南昌突起强风 男子抱住大棚被吹飞](https://so.toutiao.com/search?keyword=南昌突起强风+男子抱住大棚被吹飞)
-1. [人民热评：《王婆说媒》不应被干扰](https://so.toutiao.com/search?keyword=人民热评：《王婆说媒》不应被干扰)
 1. [马英九率台湾青年抵达深圳](https://so.toutiao.com/search?keyword=马英九率台湾青年抵达深圳)
-1. [南昌红谷滩1600多棵树一夜被吹倒](https://so.toutiao.com/search?keyword=南昌红谷滩1600多棵树一夜被吹倒)
-1. [网友建议彻查提灯定损房东是否违建](https://so.toutiao.com/search?keyword=网友建议彻查提灯定损房东是否违建)
+1. [祖孙俩连人带床垫被风卷下楼坠亡](https://so.toutiao.com/search?keyword=祖孙俩连人带床垫被风卷下楼坠亡)
+1. [袁咏仪晒合照悼念张国荣](https://so.toutiao.com/search?keyword=袁咏仪晒合照悼念张国荣)
+1. [郑爽若故意隐瞒转移财产或被判3年](https://so.toutiao.com/search?keyword=郑爽若故意隐瞒转移财产或被判3年)
+1. [南昌夫妻分房睡妻子被吹下楼坠亡](https://so.toutiao.com/search?keyword=南昌夫妻分房睡妻子被吹下楼坠亡)
+1. [广州珠江大桥一吊机倒塌](https://so.toutiao.com/search?keyword=广州珠江大桥一吊机倒塌)
 1. [德国民众在首都聚众吸食大麻](https://so.toutiao.com/search?keyword=德国民众在首都聚众吸食大麻)
-1. [南昌雷暴大风一小区3人坠亡](https://so.toutiao.com/search?keyword=南昌雷暴大风一小区3人坠亡)
-1. [女子吃螃蟹被卡 就医后查出胃癌](https://so.toutiao.com/search?keyword=女子吃螃蟹被卡+就医后查出胃癌)
-1. [马英九为何选择参观大疆腾讯比亚迪](https://so.toutiao.com/search?keyword=马英九为何选择参观大疆腾讯比亚迪)
-1. [南昌为何会突发强对流天气](https://so.toutiao.com/search?keyword=南昌为何会突发强对流天气)
-1. [越南电荒希望中国分享电力技术](https://so.toutiao.com/search?keyword=越南电荒希望中国分享电力技术)
-1. [女子大声喝止吵闹小孩与家长起争执](https://so.toutiao.com/search?keyword=女子大声喝止吵闹小孩与家长起争执)
-1. [南昌强对流天气致4死10余伤](https://so.toutiao.com/search?keyword=南昌强对流天气致4死10余伤)
-1. [父亲戒烟酒多年 临终前儿子陪喝酒](https://so.toutiao.com/search?keyword=父亲戒烟酒多年+临终前儿子陪喝酒)
-1. [山东台儿庄多人持棍棒砸电动车](https://so.toutiao.com/search?keyword=山东台儿庄多人持棍棒砸电动车)
-1. [外资买走万达 下一个会是万科吗](https://so.toutiao.com/search?keyword=外资买走万达+下一个会是万科吗)
-1. [比亚迪：3月新能源车销量30.25万辆](https://so.toutiao.com/search?keyword=比亚迪：3月新能源车销量30.25万辆)
-1. [普京幽默化解位置被州长误坐的尴尬](https://so.toutiao.com/search?keyword=普京幽默化解位置被州长误坐的尴尬)
-1. [乌士兵突然戴上德国纳粹党卫军军帽](https://so.toutiao.com/search?keyword=乌士兵突然戴上德国纳粹党卫军军帽)
+1. [南昌突起强风 男子抱住大棚被吹飞](https://so.toutiao.com/search?keyword=南昌突起强风+男子抱住大棚被吹飞)
+1. [买保时捷送小米SU7？门店回应](https://so.toutiao.com/search?keyword=买保时捷送小米SU7？门店回应)
 1. [全新腾势N7上市售23.98万起](https://so.toutiao.com/search?keyword=全新腾势N7上市售23.98万起)
+1. [南昌红谷滩1600多棵树一夜被吹倒](https://so.toutiao.com/search?keyword=南昌红谷滩1600多棵树一夜被吹倒)
+1. [男子车辆超员将女儿藏在后座角落](https://so.toutiao.com/search?keyword=男子车辆超员将女儿藏在后座角落)
+1. [网友建议彻查提灯定损房东是否违建](https://so.toutiao.com/search?keyword=网友建议彻查提灯定损房东是否违建)
+1. [南昌为何会突发强对流天气](https://so.toutiao.com/search?keyword=南昌为何会突发强对流天气)
+1. [黄金价格再创历史新高](https://so.toutiao.com/search?keyword=黄金价格再创历史新高)
+1. [小哥骑车被绊倒 捡外卖时电瓶爆炸](https://so.toutiao.com/search?keyword=小哥骑车被绊倒+捡外卖时电瓶爆炸)
+1. [南昌雷暴大风一小区3人坠亡](https://so.toutiao.com/search?keyword=南昌雷暴大风一小区3人坠亡)
+1. [女子大声喝止吵闹小孩与家长起争执](https://so.toutiao.com/search?keyword=女子大声喝止吵闹小孩与家长起争执)
+1. [江西灵山景区玩梗：不收磨损费](https://so.toutiao.com/search?keyword=江西灵山景区玩梗：不收磨损费)
+1. [女子吃螃蟹被卡 就医后查出胃癌](https://so.toutiao.com/search?keyword=女子吃螃蟹被卡+就医后查出胃癌)
+1. [比亚迪：3月新能源车销量30.25万辆](https://so.toutiao.com/search?keyword=比亚迪：3月新能源车销量30.25万辆)
+1. [人民热评：《王婆说媒》不应被干扰](https://so.toutiao.com/search?keyword=人民热评：《王婆说媒》不应被干扰)
+1. [父亲戒烟酒多年 临终前儿子陪喝酒](https://so.toutiao.com/search?keyword=父亲戒烟酒多年+临终前儿子陪喝酒)
+1. [外卖员被撞后遭顶出数十米](https://so.toutiao.com/search?keyword=外卖员被撞后遭顶出数十米)
+1. [老师讲题想用手挡答案 投影仪：选B](https://so.toutiao.com/search?keyword=老师讲题想用手挡答案+投影仪：选B)
+1. [马英九为何选择参观大疆腾讯比亚迪](https://so.toutiao.com/search?keyword=马英九为何选择参观大疆腾讯比亚迪)
+1. [俄罗斯将就恐袭事件起诉乌克兰](https://so.toutiao.com/search?keyword=俄罗斯将就恐袭事件起诉乌克兰)
+1. [山东台儿庄多人持棍棒砸电动车](https://so.toutiao.com/search?keyword=山东台儿庄多人持棍棒砸电动车)
+1. [建材老板称曾倒贴退房事件房东几千](https://so.toutiao.com/search?keyword=建材老板称曾倒贴退房事件房东几千)
+1. [小米汽车创始版追加开售又秒空](https://so.toutiao.com/search?keyword=小米汽车创始版追加开售又秒空)
+1. [高校1.4亿建留学生宿舍？校方回应](https://so.toutiao.com/search?keyword=高校1.4亿建留学生宿舍？校方回应)
+1. [卖金毛却摆空狗笼？狗子出去社交了](https://so.toutiao.com/search?keyword=卖金毛却摆空狗笼？狗子出去社交了)
+1. [外资买走万达 下一个会是万科吗](https://so.toutiao.com/search?keyword=外资买走万达+下一个会是万科吗)
+1. [普京幽默化解位置被州长误坐的尴尬](https://so.toutiao.com/search?keyword=普京幽默化解位置被州长误坐的尴尬)
+1. [越南电荒希望中国分享电力技术](https://so.toutiao.com/search?keyword=越南电荒希望中国分享电力技术)
+1. [南昌强对流天气致4死10余伤](https://so.toutiao.com/search?keyword=南昌强对流天气致4死10余伤)
+1. [巴黎街头依旧老鼠横行](https://so.toutiao.com/search?keyword=巴黎街头依旧老鼠横行)
+1. [海南旅游遭雷击男子不幸身亡](https://so.toutiao.com/search?keyword=海南旅游遭雷击男子不幸身亡)
+1. [公职人员捅人致死已被刑拘](https://so.toutiao.com/search?keyword=公职人员捅人致死已被刑拘)
+1. [德国娱乐性大麻合法化引担忧](https://so.toutiao.com/search?keyword=德国娱乐性大麻合法化引担忧)
+1. [乌士兵突然戴上德国纳粹党卫军军帽](https://so.toutiao.com/search?keyword=乌士兵突然戴上德国纳粹党卫军军帽)
 1. [海清素颜回老家祭祖](https://so.toutiao.com/search?keyword=海清素颜回老家祭祖)
 1. [中日专家已就福岛核污染水排海对话](https://so.toutiao.com/search?keyword=中日专家已就福岛核污染水排海对话)
 1. [体验全新腾势N7](https://so.toutiao.com/search?keyword=体验全新腾势N7)
 1. [4楼男子厨房抽烟2楼邻居找上门](https://so.toutiao.com/search?keyword=4楼男子厨房抽烟2楼邻居找上门)
-1. [高校1.4亿建留学生宿舍？校方回应](https://so.toutiao.com/search?keyword=高校1.4亿建留学生宿舍？校方回应)
 1. [13岁女孩帮同学取快递失踪 家属发声](https://so.toutiao.com/search?keyword=13岁女孩帮同学取快递失踪+家属发声)
 1. [对话王婆：如何成月老手下的“销冠”](https://so.toutiao.com/search?keyword=对话王婆：如何成月老手下的“销冠”)
 1. [俄罗斯一咖啡馆发生爆炸](https://so.toutiao.com/search?keyword=俄罗斯一咖啡馆发生爆炸)
@@ -60,11 +73,7 @@
 1. [驻俄大使回应中方会否调解俄乌冲突](https://so.toutiao.com/search?keyword=驻俄大使回应中方会否调解俄乌冲突)
 1. [湖北18岁高中生已失联30天](https://so.toutiao.com/search?keyword=湖北18岁高中生已失联30天)
 1. [台军在金门搞实弹射击有何企图](https://so.toutiao.com/search?keyword=台军在金门搞实弹射击有何企图)
-1. [外卖员被撞后遭顶出数十米](https://so.toutiao.com/search?keyword=外卖员被撞后遭顶出数十米)
-1. [黄金价格再创历史新高](https://so.toutiao.com/search?keyword=黄金价格再创历史新高)
-1. [袁咏仪晒合照悼念张国荣](https://so.toutiao.com/search?keyword=袁咏仪晒合照悼念张国荣)
 1. [南昌狂风屋顶被“剃头”菜棚被卷走](https://so.toutiao.com/search?keyword=南昌狂风屋顶被“剃头”菜棚被卷走)
-1. [建材老板称曾倒贴退房事件房东几千](https://so.toutiao.com/search?keyword=建材老板称曾倒贴退房事件房东几千)
 1. [特斯拉FSD正式取消“测试版”标签](https://so.toutiao.com/search?keyword=特斯拉FSD正式取消“测试版”标签)
 1. [淳朴云南热情洋溢](https://so.toutiao.com/search?keyword=淳朴云南热情洋溢)
 1. [官方通报女子22楼扔下孩子：突发躁狂](https://so.toutiao.com/search?keyword=官方通报女子22楼扔下孩子：突发躁狂)
@@ -108,14 +117,12 @@
 1. [张亚中：邱国正或被设局拉下台](https://so.toutiao.com/search?keyword=张亚中：邱国正或被设局拉下台)
 1. [中方遇难人员遗体告别仪式在巴举行](https://so.toutiao.com/search?keyword=中方遇难人员遗体告别仪式在巴举行)
 1. [文森特：詹姆斯证明了他的努力勤勉](https://so.toutiao.com/search?keyword=文森特：詹姆斯证明了他的努力勤勉)
-1. [海南旅游遭雷击男子不幸身亡](https://so.toutiao.com/search?keyword=海南旅游遭雷击男子不幸身亡)
 1. [小米SU7创始版第2轮追加开售已售罄](https://so.toutiao.com/search?keyword=小米SU7创始版第2轮追加开售已售罄)
 1. [6人因“咸猪手”引发斗殴均被控制](https://so.toutiao.com/search?keyword=6人因“咸猪手”引发斗殴均被控制)
 1. [中缅警方在缅北开展联合打击行动](https://so.toutiao.com/search?keyword=中缅警方在缅北开展联合打击行动)
 1. [乌方：俄军或再次进攻基辅](https://so.toutiao.com/search?keyword=乌方：俄军或再次进攻基辅)
 1. [29岁旅日大熊猫爽爽因病死亡](https://so.toutiao.com/search?keyword=29岁旅日大熊猫爽爽因病死亡)
 1. [斯洛伐克飞行汽车将在中国生产](https://so.toutiao.com/search?keyword=斯洛伐克飞行汽车将在中国生产)
-1. [江西灵山景区玩梗：不收磨损费](https://so.toutiao.com/search?keyword=江西灵山景区玩梗：不收磨损费)
 1. [女子熬夜后报复式补觉一天饿晕倒](https://so.toutiao.com/search?keyword=女子熬夜后报复式补觉一天饿晕倒)
 1. [张颂文返乡参加亲戚婚礼](https://so.toutiao.com/search?keyword=张颂文返乡参加亲戚婚礼)
 1. [保时捷门店回应买保时捷送小米SU7](https://so.toutiao.com/search?keyword=保时捷门店回应买保时捷送小米SU7)
