--- a/archives/toutiao-search/2024-04-02.md
+++ b/archives/toutiao-search/2024-04-02.md
@@ -1,59 +1,69 @@
 # 2024-04-02
 
-共 66 条
+共 75 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Apr 02 2024 02:02:20 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Apr 02 2024 03:00:41 GMT+0800 (China Standard Time) -->
 1. [提灯定损房东女儿被开除？当地回应](https://so.toutiao.com/search?keyword=提灯定损房东女儿被开除？当地回应)
 1. [媒体谈解放军为何要在中缅边境演习](https://so.toutiao.com/search?keyword=媒体谈解放军为何要在中缅边境演习)
 1. [有一种叫云南的生活](https://so.toutiao.com/search?keyword=有一种叫云南的生活)
 1. [网友：整个上饶被“提灯定损”牵连](https://so.toutiao.com/search?keyword=网友：整个上饶被“提灯定损”牵连)
 1. [俄对乌用大威力炸弹 爆炸云高千米](https://so.toutiao.com/search?keyword=俄对乌用大威力炸弹+爆炸云高千米)
-1. [解放军将在中缅边境实兵实弹演习](https://so.toutiao.com/search?keyword=解放军将在中缅边境实兵实弹演习)
-1. [网友建议彻查提灯定损房东是否违建](https://so.toutiao.com/search?keyword=网友建议彻查提灯定损房东是否违建)
-1. [4楼男子厨房抽烟2楼邻居找上门](https://so.toutiao.com/search?keyword=4楼男子厨房抽烟2楼邻居找上门)
 1. [雷军再次请大家吐槽SU7时口下留情](https://so.toutiao.com/search?keyword=雷军再次请大家吐槽SU7时口下留情)
-1. [德国民众在首都聚众吸食大麻](https://so.toutiao.com/search?keyword=德国民众在首都聚众吸食大麻)
+1. [网友建议彻查提灯定损房东是否违建](https://so.toutiao.com/search?keyword=网友建议彻查提灯定损房东是否违建)
+1. [解放军将在中缅边境实兵实弹演习](https://so.toutiao.com/search?keyword=解放军将在中缅边境实兵实弹演习)
+1. [4楼男子厨房抽烟2楼邻居找上门](https://so.toutiao.com/search?keyword=4楼男子厨房抽烟2楼邻居找上门)
+1. [山东台儿庄多人持棍棒砸电动车](https://so.toutiao.com/search?keyword=山东台儿庄多人持棍棒砸电动车)
 1. [实探南昌3人被大风吹落坠亡现场](https://so.toutiao.com/search?keyword=实探南昌3人被大风吹落坠亡现场)
 1. [湖南一地辟谣幼师针扎虐童](https://so.toutiao.com/search?keyword=湖南一地辟谣幼师针扎虐童)
 1. [马英九率台湾青年抵达深圳](https://so.toutiao.com/search?keyword=马英九率台湾青年抵达深圳)
 1. [祖孙俩连人带床垫被风卷下楼坠亡](https://so.toutiao.com/search?keyword=祖孙俩连人带床垫被风卷下楼坠亡)
-1. [广州珠江大桥一吊机倒塌](https://so.toutiao.com/search?keyword=广州珠江大桥一吊机倒塌)
-1. [全新腾势N7上市售23.98万起](https://so.toutiao.com/search?keyword=全新腾势N7上市售23.98万起)
-1. [南昌夫妻分房睡妻子被吹下楼坠亡](https://so.toutiao.com/search?keyword=南昌夫妻分房睡妻子被吹下楼坠亡)
-1. [学生操场做不雅行为？校方回应](https://so.toutiao.com/search?keyword=学生操场做不雅行为？校方回应)
+1. [俄安全局长：知道谁是恐袭组织者](https://so.toutiao.com/search?keyword=俄安全局长：知道谁是恐袭组织者)
 1. [马英九为何选择参观大疆腾讯比亚迪](https://so.toutiao.com/search?keyword=马英九为何选择参观大疆腾讯比亚迪)
+1. [南昌夫妻分房睡妻子被吹下楼坠亡](https://so.toutiao.com/search?keyword=南昌夫妻分房睡妻子被吹下楼坠亡)
+1. [房东索赔上万 租客赔四千合理吗](https://so.toutiao.com/search?keyword=房东索赔上万+租客赔四千合理吗)
+1. [学生操场做不雅行为？校方回应](https://so.toutiao.com/search?keyword=学生操场做不雅行为？校方回应)
 1. [南昌突起强风 男子抱住大棚被吹飞](https://so.toutiao.com/search?keyword=南昌突起强风+男子抱住大棚被吹飞)
-1. [建材老板称曾倒贴退房事件房东几千](https://so.toutiao.com/search?keyword=建材老板称曾倒贴退房事件房东几千)
-1. [山东台儿庄多人持棍棒砸电动车](https://so.toutiao.com/search?keyword=山东台儿庄多人持棍棒砸电动车)
+1. [外资买走万达 下一个会是万科吗](https://so.toutiao.com/search?keyword=外资买走万达+下一个会是万科吗)
+1. [德国民众在首都聚众吸食大麻](https://so.toutiao.com/search?keyword=德国民众在首都聚众吸食大麻)
 1. [南昌红谷滩1600多棵树一夜被吹倒](https://so.toutiao.com/search?keyword=南昌红谷滩1600多棵树一夜被吹倒)
 1. [台军在金门搞实弹射击有何企图](https://so.toutiao.com/search?keyword=台军在金门搞实弹射击有何企图)
-1. [恒大地产被强制执行6.9亿元](https://so.toutiao.com/search?keyword=恒大地产被强制执行6.9亿元)
-1. [南昌为何会突发强对流天气](https://so.toutiao.com/search?keyword=南昌为何会突发强对流天气)
 1. [24岁小伙为上台找王婆说媒蹲了4天](https://so.toutiao.com/search?keyword=24岁小伙为上台找王婆说媒蹲了4天)
-1. [外资买走万达 下一个会是万科吗](https://so.toutiao.com/search?keyword=外资买走万达+下一个会是万科吗)
+1. [南昌为何会突发强对流天气](https://so.toutiao.com/search?keyword=南昌为何会突发强对流天气)
+1. [建材老板称曾倒贴退房事件房东几千](https://so.toutiao.com/search?keyword=建材老板称曾倒贴退房事件房东几千)
+1. [大爷要求孩子让座和宝妈发生争执](https://so.toutiao.com/search?keyword=大爷要求孩子让座和宝妈发生争执)
 1. [南昌雷暴大风一小区3人坠亡](https://so.toutiao.com/search?keyword=南昌雷暴大风一小区3人坠亡)
-1. [俄安全局长：知道谁是恐袭组织者](https://so.toutiao.com/search?keyword=俄安全局长：知道谁是恐袭组织者)
-1. [买保时捷送小米SU7？门店回应](https://so.toutiao.com/search?keyword=买保时捷送小米SU7？门店回应)
+1. [泽连斯基公开谈“撤退”施压美国](https://so.toutiao.com/search?keyword=泽连斯基公开谈“撤退”施压美国)
+1. [台军方辩解士兵被大陆无人机吓跑](https://so.toutiao.com/search?keyword=台军方辩解士兵被大陆无人机吓跑)
 1. [南昌强对流天气致4死10余伤](https://so.toutiao.com/search?keyword=南昌强对流天气致4死10余伤)
+1. [菲称中国“以大欺小” 外交部驳斥](https://so.toutiao.com/search?keyword=菲称中国“以大欺小”+外交部驳斥)
+1. [广州珠江大桥一吊机倒塌](https://so.toutiao.com/search?keyword=广州珠江大桥一吊机倒塌)
+1. [南昌狂风屋顶被“剃头”菜棚被卷走](https://so.toutiao.com/search?keyword=南昌狂风屋顶被“剃头”菜棚被卷走)
+1. [东部战区空军空战对抗训练高燃现场](https://so.toutiao.com/search?keyword=东部战区空军空战对抗训练高燃现场)
+1. [恒大地产被强制执行6.9亿元](https://so.toutiao.com/search?keyword=恒大地产被强制执行6.9亿元)
+1. [俄罗斯将就恐袭事件起诉乌克兰](https://so.toutiao.com/search?keyword=俄罗斯将就恐袭事件起诉乌克兰)
 1. [老人拿锤砸火车站座椅无线充电器](https://so.toutiao.com/search?keyword=老人拿锤砸火车站座椅无线充电器)
-1. [德国娱乐性大麻合法化引担忧](https://so.toutiao.com/search?keyword=德国娱乐性大麻合法化引担忧)
 1. [江西灵山景区玩梗：不收磨损费](https://so.toutiao.com/search?keyword=江西灵山景区玩梗：不收磨损费)
+1. [郑爽若故意隐瞒转移财产或被判3年](https://so.toutiao.com/search?keyword=郑爽若故意隐瞒转移财产或被判3年)
+1. [岳阳版“王婆说媒”引爆汴河街](https://so.toutiao.com/search?keyword=岳阳版“王婆说媒”引爆汴河街)
+1. [买保时捷送小米SU7？门店回应](https://so.toutiao.com/search?keyword=买保时捷送小米SU7？门店回应)
+1. [岳阳暴雨后现女尸 无人认领](https://so.toutiao.com/search?keyword=岳阳暴雨后现女尸+无人认领)
+1. [为何银行会反过来向员工讨薪](https://so.toutiao.com/search?keyword=为何银行会反过来向员工讨薪)
+1. [俄要求乌逮捕并引渡参与恐袭人员](https://so.toutiao.com/search?keyword=俄要求乌逮捕并引渡参与恐袭人员)
+1. [普京幽默化解位置被州长误坐的尴尬](https://so.toutiao.com/search?keyword=普京幽默化解位置被州长误坐的尴尬)
+1. [全新腾势N7上市售23.98万起](https://so.toutiao.com/search?keyword=全新腾势N7上市售23.98万起)
+1. [巴黎奥运会到底出了什么问题](https://so.toutiao.com/search?keyword=巴黎奥运会到底出了什么问题)
+1. [媒体：美日菲在中国周边升级挑衅](https://so.toutiao.com/search?keyword=媒体：美日菲在中国周边升级挑衅)
+1. [德国娱乐性大麻合法化引担忧](https://so.toutiao.com/search?keyword=德国娱乐性大麻合法化引担忧)
 1. [马英九二度访问大陆有何积极意义](https://so.toutiao.com/search?keyword=马英九二度访问大陆有何积极意义)
 1. [小米汽车创始版追加开售又秒空](https://so.toutiao.com/search?keyword=小米汽车创始版追加开售又秒空)
-1. [郑爽若故意隐瞒转移财产或被判3年](https://so.toutiao.com/search?keyword=郑爽若故意隐瞒转移财产或被判3年)
-1. [房东索赔上万 租客赔四千合理吗](https://so.toutiao.com/search?keyword=房东索赔上万+租客赔四千合理吗)
 1. [女子大声喝止吵闹小孩与家长起争执](https://so.toutiao.com/search?keyword=女子大声喝止吵闹小孩与家长起争执)
 1. [巴黎街头依旧老鼠横行](https://so.toutiao.com/search?keyword=巴黎街头依旧老鼠横行)
 1. [《今天的她们》大鹏叔是模范老公](https://so.toutiao.com/search?keyword=《今天的她们》大鹏叔是模范老公)
-1. [普京幽默化解位置被州长误坐的尴尬](https://so.toutiao.com/search?keyword=普京幽默化解位置被州长误坐的尴尬)
-1. [为何银行会反过来向员工讨薪](https://so.toutiao.com/search?keyword=为何银行会反过来向员工讨薪)
 1. [大V：谁给提灯定损房东讹人的底气](https://so.toutiao.com/search?keyword=大V：谁给提灯定损房东讹人的底气)
-1. [大爷要求孩子让座和宝妈发生争执](https://so.toutiao.com/search?keyword=大爷要求孩子让座和宝妈发生争执)
 1. [以色列海军基地遭无人机袭击](https://so.toutiao.com/search?keyword=以色列海军基地遭无人机袭击)
 1. [黄金价格再创历史新高](https://so.toutiao.com/search?keyword=黄金价格再创历史新高)
 1. [湖南消防集中拆除不合规防盗窗](https://so.toutiao.com/search?keyword=湖南消防集中拆除不合规防盗窗)
-1. [台军方辩解士兵被大陆无人机吓跑](https://so.toutiao.com/search?keyword=台军方辩解士兵被大陆无人机吓跑)
 1. [金门防卫部火炮转向金厦南部水域](https://so.toutiao.com/search?keyword=金门防卫部火炮转向金厦南部水域)
 1. [唐宝宝洗车被车主少给15元钱](https://so.toutiao.com/search?keyword=唐宝宝洗车被车主少给15元钱)
 1. [男子车辆超员将女儿藏在后座角落](https://so.toutiao.com/search?keyword=男子车辆超员将女儿藏在后座角落)
@@ -62,7 +72,6 @@
 1. [巴基斯坦逮捕多名参与达苏恐袭人员](https://so.toutiao.com/search?keyword=巴基斯坦逮捕多名参与达苏恐袭人员)
 1. [越南电荒希望中国分享电力技术](https://so.toutiao.com/search?keyword=越南电荒希望中国分享电力技术)
 1. [雨夜一婴儿爬上马路 市民紧急救援](https://so.toutiao.com/search?keyword=雨夜一婴儿爬上马路+市民紧急救援)
-1. [南昌狂风屋顶被“剃头”菜棚被卷走](https://so.toutiao.com/search?keyword=南昌狂风屋顶被“剃头”菜棚被卷走)
 1. [海南旅游遭雷击男子不幸身亡](https://so.toutiao.com/search?keyword=海南旅游遭雷击男子不幸身亡)
 1. [白鲸“承认”吓唬小朋友](https://so.toutiao.com/search?keyword=白鲸“承认”吓唬小朋友)
 1. [马英九随团台生：我是大疆的粉丝](https://so.toutiao.com/search?keyword=马英九随团台生：我是大疆的粉丝)
